--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -53,16 +53,27 @@ $color-lines-light:#e0e0e0;
 $color-text:$black;
 $color-background:$white;
 
-//Red
+//Other colors
+$brand-orange:#f9922c;
 $brand-red:#d33131;
 $brand-blue:#3535e0;
-
+$brand-green:#25a42b;
+$brand-magenta:#b65982;
+$brand-navy:#2c2749;
 
 // Interaction colours
 $hover:$color-brand;
 $focus:$color-brand;
 $active:$color-brand;
 
+// Project colors
+$head-panel-title:$white;
+$head-bg:transparent;
+$content-bg:$brand-navy;
+$web-bg:$brand-magenta;
+$seo-bg:$brand-orange;
+$contact-bg:transparent;
+$footer-bg:$brand-navy;
 
 // Styling  ---------------------------------------
 
@@ -150,8 +161,8 @@ $font-thin:300;
 // Other custom text mixins
 
 @mixin text-blocky{
-	text-transform:uppercase;
-	letter-spacing:.07em;
+  font-weight: 400;
+  font-size: .9em;
 }
 
 @mixin text-tiny{
@@ -340,74 +351,24 @@ html,body{
 }
 
 body{
-  display:flex;
-}
-
-.menu{
-  width:0;
-  z-index:1;
-  flex-grow:1;
-  overflow-x:hidden;
-  .menu__inner{
-    width:100%;
-    display:none;
-    position:fixed;
-    top:0;
-    left:0;
-  }
-  .nav__head{
-    padding:0 2rem;
-    height:80px;
-    display:flex;
-    border-bottom:1px solid rgba(0,0,0,.1);
-    box-shadow: 0 1px 0 $white;
-    .header__button{
-      align-items:center;
-    }
-  }
-  nav{
-    display:block;
-    height:100%;
-    width:100%;
-    a{
-      display:block;
-      padding:1.4rem 2rem;
-      @include border-indent();
-    }
-  }
-}
-
-.content{
   width:100%;
   height:100%;
   position:relative;
 }
 
 .content__backgrounds{
-  position:absolute;
-  top:80px;
+  position:fixed;
   left:0;
   width:100%;
   height:100%;
   background-color:$black;
-  z-index:-1;
+  z-index:-5;
   min-height:700px;
   .panel-background{
     width:100%;
     height:100%;
     position:relative;
     background-size:cover;
-    object{
-      width: 40%;
-      height: auto;
-      left: 55%;
-      top: 20%;
-      position:relative;
-      display:none;
-      @include bp($bp3){
-        display:block;
-      }
-    }
     &.--bg-content{
       background-image:url(../img/content/hero-content.jpg);
     }
@@ -427,11 +388,13 @@ $headerheight:80px;
 $headerheightminus:-80px;
 
 header{
+  $white:#e8e8e8;
   position:fixed;
   width:100%;
   height:$headerheight;
   z-index:20;
-  background-color:$white;
+  background:transparent;
+  border-bottom:1px solid $white;
   @include bp($bp2){
     //position:relative;
   }
@@ -450,9 +413,15 @@ header{
     .header__site-title{
       font-weight:500;
       text-transform:uppercase;
+      text-shadow:0 2px rgba(0,0,0,.2);
+      .inverted &{
+        color:$white;
+      }
       color:$black;
-      width: 300px;
+      max-width: 400px;
+      width:100%;
       text-align: right;
+      color:$white;
       img{
         max-width:200px;
         @include bp($bp1){
@@ -470,13 +439,16 @@ header{
         }
       }
       nav{
-        font-weight:font-mid;
+        font-weight: 400;
+        font-size: .9em;
         display:none;
         @include bp($bp3){
           display:flex;
         }
         justify-content:space-between;
         .nav__nav-item{
+          color:$white;
+          text-shadow:0 2px rgba(0,0,0,.2);
         }
       }
     }
@@ -507,27 +479,31 @@ main{
   }
   .main__panel{
     width:100%;
-    background:$white;
     overflow:hidden;
+    display:flex;
+    position:relative;
     //height defined by js
     @include bp($bp2){
       padding-top:0;
       padding-bottom:0;
     }
     &.--head{
-      background:transparent;
+      background-color:$head-bg;
     }
-    &.--web{
-      background-color:$brand-blue;
-      @include bp-under(800px){
-        background-color:$brand-blue;
+    &.--content{
+      background-color:$content-bg;
+      .--image-full{
+        //background-image:url('../img/content/content.jpg');
       }
     }
+    &.--web{
+      background-color:$web-bg;
+    }
     &.--seo{
-      background:$white;
+      background-color:$seo-bg;
     }
     &.--contact{
-      background:$white-off;
+      background-color:$contact-bg;
       .--form-intro{
         @include bp-under(800px){
           padding-bottom:0;
@@ -539,11 +515,15 @@ main{
         }
       }
     }
+    
     &.--inverted{
       color:$white;
     }
   }
 }
+
+
+
 
 // inner panel
 
@@ -569,15 +549,48 @@ main{
     padding-bottom:80px;
   }
   &.--text{
-    padding-left:2rem;
+    padding-left:8rem;
     padding-right:4rem;
   }
   &.--image{
     width:100%;
     height:400px;
-    background-image:url('../img/content/content.jpg');
+    position:relative;
+    object{
+      width: 60%;
+      height: auto;
+      position:absolute;
+      right:0;
+      top:0;
+      display:none;
+      @include bp($bp3){
+        display:block;
+      }
+    }
+    @include bp($bp2){
+      width:50%;
+      height:auto;
+      padding-top:0;
+      padding-bottom:0;
+    }
+  }
+  &.--image-full{
+    width:100%;
+    height:400px;
     background-size:cover;
     background-position:center center;
+    position:relative;
+    object{
+      width: 60%;
+      height: auto;
+      top:25%;
+      right:25%;
+      position:absolute;
+      display:none;
+      @include bp($bp3){
+        display:block;
+      }
+    }
     @include bp($bp2){
       width:50%;
       height:100%;
@@ -602,6 +615,9 @@ main{
         .--head &{
         }
 }
+
+// Panel title -----------------------------------
+
 .panel__title{
         font-family:$font-titles,sans-serif;
         font-size:3em;
@@ -609,16 +625,17 @@ main{
         letter-spacing:-.02em;
         margin-bottom:.6em;
         line-height: 1;
+        max-width:900px;
+        .--head &{
+          color:$head-panel-title;
+        }
         .content__inner_half &{
           font-size:2.6em;
-        }
-        .--head &{
-          max-width:660px;
         }
         @include bp($bp2){
           font-size:4em;
           .--head &{
-            width:60%;
+            font-size:5em;
           }
         }
 }
@@ -627,10 +644,6 @@ main{
         margin-bottom:2em;
         @include bp($bp3){
           margin-bottom:3em;
-          .--head &{
-            max-width:660px;
-            width:60%; 
-          }
         }
 }
   
@@ -770,7 +783,7 @@ i{
 
 .footer{
   height:auto;
-  background-color:$black;
+  background-color:$footer-bg;
   color:$white;
   .footer__content{
     padding-top:6rem;
