--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -315,29 +315,6 @@ body{
 
 // LAYOUT -----------------------------------
 
-$containerwidth:1200px;
-
-@mixin containerwidth(){
-  max-width:$containerwidth;
-  width:100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-
-// Defaults
-
-.container{
-  @include containerwidth();
-  &.--full_width{
-    max-width:100%;
-  }
-  &.--padded{
-    padding-left:2rem;
-    padding-right:2rem;
-  }
-}
-
 
 // Main structure
 
@@ -405,6 +382,8 @@ header{
     flex-direction:column;
   }
   .header__inner{
+    padding-left:2rem;
+    padding-right:4rem;
     width:100%;
     height:$headerheight;
     display:flex;
@@ -434,6 +413,7 @@ header{
     .header__nav{
       flex-grow:2;
       .nav__button{
+        color:$white;
         @include bp($bp3){
           display:none!important;
         }
@@ -441,14 +421,36 @@ header{
       nav{
         font-weight: 400;
         font-size: .9em;
-        display:none;
+        display: none;
+        .no-js &{
+          display:block!important;
+        }
+        width: 100%;
+        position:absolute;
+        top:80px;
+        left:0;
         @include bp($bp3){
           display:flex;
+          position:relative;
+          top:0;
+          justify-content:space-between;
         }
-        justify-content:space-between;
         .nav__nav-item{
           color:$white;
           text-shadow:0 2px rgba(0,0,0,.2);
+          display: block;
+          width: 100%;
+          text-align:left;
+          padding: 1em;
+          border-bottom:1px solid #231f38;
+          background-color:$brand-navy;
+          @include bp($bp3){
+            text-align:center;
+            padding:0;
+            background-color:transparent;
+            border-bottom:0;
+            width:auto;
+          }
         }
       }
     }
@@ -464,6 +466,10 @@ main{
   height:auto;
   position:relative;
   display:block;
+  padding-top:80px;
+  @include bp($bp3){
+  padding-top:0;
+  }
   .load-overlay{
     position:absolute;
     top:0;
@@ -525,7 +531,32 @@ main{
 
 
 
-// inner panel
+// LAYOUT -------------------------------------------------------
+
+$containerwidth:1200px;
+$bpcw:$containerwidth;
+
+@mixin containerwidth(){
+  max-width:$containerwidth;
+  width:100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+// Defaults
+
+.container{
+  @include containerwidth();
+  &.--full_width{
+    max-width:100%;
+  }
+}
+
+
+
+
+// inner panel -------------------------------------------------------
 
 .panel__content{
     @include bp($bp2){
@@ -533,87 +564,85 @@ main{
         align-items:center;
         justify-content:space-between;
         height:100%;
-      }
-      &.--full_width{
-        justify-content:space-around;
-      }
+    }
+    &.--full_width{
+      justify-content:space-around;
+    }
 }
 
-.content__inner_half{
-  width:100%;
+.content__inner_split, .content__inner_full{
+  
+  &.--text{
+    padding-left:2rem;
+    padding-right:4rem;
+    width:100%;
+    @include bp($bpcw){
+      padding-left:0;
+      padding-right:4rem;
+    }
+    .--full_width &{
+      padding-left:2rem;
+      padding-right:4rem;
+      @include bp($bpcw){
+        padding-left:8rem;
+        padding-right:4rem;
+      }
+    }
+  }
+}
+
+.content__inner_split{
   padding-top:4em;
   padding-bottom:4em;
-  @include bp($bp2){
+  width:100%;
+  @include bp($bp3){
     width:50%;
-    padding-top:160px;
-    padding-bottom:80px;
-  }
-  &.--text{
-    padding-left:8rem;
-    padding-right:4rem;
+    height:auto;
+    padding-top:0;
+    padding-bottom:0;
   }
   &.--image{
     width:100%;
     height:400px;
     position:relative;
+    display:none;
+    @include bp($bp3){
+      display:block;
+    }
     object{
       width: 60%;
       height: auto;
       position:absolute;
       right:0;
       top:0;
-      display:none;
-      @include bp($bp3){
-        display:block;
-      }
-    }
-    @include bp($bp2){
-      width:50%;
-      height:auto;
-      padding-top:0;
-      padding-bottom:0;
     }
   }
   &.--image-full{
-    width:100%;
-    height:400px;
+    width:50%;
+    height:100%;
+    padding-top:0;
+    padding-bottom:0;
     background-size:cover;
     background-position:center center;
     position:relative;
+    display:none;
+    @include bp($bp3){
+      display:block;
+    }
     object{
       width: 60%;
       height: auto;
-      top:25%;
+      top:35%;
       right:25%;
       position:absolute;
-      display:none;
-      @include bp($bp3){
-        display:block;
-      }
-    }
-    @include bp($bp2){
-      width:50%;
-      height:100%;
-      padding-top:0;
-      padding-bottom:0;
     }
   }
 }
   
 .content__inner_full{
-        width:100%;
-        padding-top:4em;
-        padding-bottom:4em;
-        @include bp($bp2){
-          padding-top:160px;
-          padding-bottom:80px;
-        }
-        &.--text{
-          padding-left:2rem;
-          padding-right:4rem;
-        }
-        .--head &{
-        }
+  width:100%;
+  padding-top:4em;
+  padding-bottom:4em;
 }
 
 // Panel title -----------------------------------
@@ -625,11 +654,11 @@ main{
         letter-spacing:-.02em;
         margin-bottom:.6em;
         line-height: 1;
-        max-width:900px;
         .--head &{
           color:$head-panel-title;
+          max-width:900px;
         }
-        .content__inner_half &{
+        .content__inner_split &{
           font-size:2.6em;
         }
         @include bp($bp2){
@@ -716,11 +745,15 @@ i{
   letter-spacing:.05;
   border:2px solid $black;
   @include hover-transition(all .4s ease);
-  min-width:190px;
+  .--head &{
+    max-width:250px;
+  }
+  max-width:300px;
+  width:100%;
   margin-bottom:1em;
   position:relative;
   z-index:5;
-  @include bp($bp2){
+  @include bp($bp3){
     display:inline-block;
     margin-right:1em;
   }
